--- a/package.json
+++ b/package.json
@@ -1,19 +1,17 @@
 {
-  "name": "MyNoteKeeper",
+  "name": "mynotekeeper",
   "version": "1.0.0",
-  "main": "index.js",
-  "license": "MIT",
-  "dependencies": {
-    "dotenv": "^16.4.5",
-    "express": "^4.21.0",
-    "mongoose": "^8.6.3",
-    "morgan": "^1.10.0"
-  },
-  "devDependencies": {
-    "nodemon": "^3.1.5"
-  },
+  "description": "root package json ",
+  "main": "server/server.js",
   "scripts": {
-    "start": "nodemon server.js",
-    "start:prod": "NODE_ENV=production npm start"
+    "start": "NODE_ENV=production node server/server.js",
+    "client": "npm run dev --prefix client",
+    "server": "NODE_ENV=development nodemon server/server.js",
+    "dev": "concurrently \"npm run server\" \"npm run client\""
+  },
+  "author": "AlaaDuridi",
+  "license": "ISC",
+  "devDependencies": {
+    "concurrently": "^9.1.0"
   }
 }
